--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
+.horizontal {
+  display: -moz-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  -moz-box-orient: horizontal;
+  -webkit-box-orient: horizontal;
+  -ms-flex-direction: row
+}
+
+.vertical {
+  display: -moz-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  -ms-flex-direction: column;
+  -moz-box-orient: vertical;
+  -webkit-box-orient: vertical
+}
+
+.box_center {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -o-box-pack: center;
+  -o-box-align: center;
+  -webkit-justify-content: center;
+  justify-content: center
+}
+
+.box_align_start {
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  -o-box-align: start;
+  -ms-flex-align: start
+}
+
+.box_align_end {
+  -webkit-box-align: end;
+  -moz-box-align: end;
+  -o-box-align: end;
+  -ms-flex-align: end
+}
+
+.box_pack_start {
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  -o-box-pack: start;
+  -ms-flex-pack: start
+}
+
+.box_pack_end {
+  -webkit-box-pack: end;
+  -moz-box-pack: end;
+  -o-box-pack: end;
+  -ms-flex-pack: end
+}
+
+.flex {
+  -moz-box-flex: 1;
+  -webkit-box-flex: 1;
+  -ms-flex: 1
+}
