--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,3 +6,12 @@ section{
   right: 16px;
   top: 16px;
 }
+h2{
+  line-height: 50px;
+}
+.login-form-forgot{
+  float: right;
+}
+.login-form-button:last-child{
+  float:right;
+}
