--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,36 +1,36 @@
 <section class="box_center">
-  <a class="link-service">连接远程服务</a>
-  <article>
+  <a class="link-service" (click)="changePattern($event)">连接远程服务</a>
+  <article *ngIf="pattern==='remote'">
     远程服务链接配置
   </article>
   <article>
     <header><h2>接口模拟系统</h2></header>
-    <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="_submitForm()">
+    <form nz-form [formGroup]="loginForm" class="login-form" (ngSubmit)="_submitForm()">
       <div nz-form-item>
-        <div nz-form-control [nzValidateStatus]="validateForm.controls.userName">
+        <div nz-form-control [nzValidateStatus]="loginForm.controls.userName">
           <nz-input formControlName="userName" [nzPlaceHolder]="'Username'" [nzSize]="'large'">
             <ng-template #prefix>
               <i class="anticon anticon-user"></i>
             </ng-template>
           </nz-input>
-          <div nz-form-explain *ngIf="validateForm.controls.userName.dirty&&validateForm.controls.userName.hasError('required')">Please input your username!</div>
+          <div nz-form-explain *ngIf="loginForm.controls.userName.dirty&&loginForm.controls.userName.hasError('required')">Please input your username!</div>
         </div>
       </div>
       <div nz-form-item>
-        <div nz-form-control [nzValidateStatus]="validateForm.controls.password">
+        <div nz-form-control [nzValidateStatus]="loginForm.controls.password">
           <nz-input formControlName="password" [nzType]="'password'" [nzPlaceHolder]="'Password'" [nzSize]="'large'">
             <ng-template #prefix>
               <i class="anticon anticon-lock"></i>
             </ng-template>
           </nz-input>
-          <div nz-form-explain *ngIf="validateForm.controls.password.dirty&&validateForm.controls.password.hasError('required')">Please input your Password!</div>
+          <div nz-form-explain *ngIf="loginForm.controls.password.dirty&&loginForm.controls.password.hasError('required')">Please input your Password!</div>
         </div>
       </div>
       <div nz-form-item>
         <div nz-form-control>
-          <a class="login-form-forgot" class="login-form-forgot">Forgot password</a>
+          <a class="login-form-forgot">Forgot password</a><br>
           <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'">登录</button>
-          <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'">注册</button>
+          <button nz-button class="login-form-button" [nzType]="'default'" [nzSize]="'large'">注册</button>
         </div>
       </div>
     </form>
