--- a/src/app/login-manager/login-manager.component.html
+++ b/src/app/login-manager/login-manager.component.html
@@ -1,7 +1,6 @@
 <section class="box_center">
   <a class="link-service" (click)="changePattern($event)">连接远程服务</a>
-  <article *ngIf="pattern==='remote'">
-    远程服务链接配置
-  </article>
-  <app-login></app-login>
+  <remote-server *ngIf="pattern==='remote'"></remote-server>
+  <div *ngIf="pattern==='remote'" class="division"></div>
+  <login></login>
 </section>
