--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<div *ngIf="!initFlag" class="box_center"><nz-spin [nzTip]="tip"></nz-spin></div>
+<div *ngIf="!initFlag" class="box_center" style="height: 100%;"><nz-spin [nzTip]="tip"></nz-spin></div>
 <login-manager *ngIf="initFlag"></login-manager>
