--- a/src/app/login-manager/login/login.component.html
+++ b/src/app/login-manager/login/login.component.html
@@ -24,7 +24,7 @@
     <div nz-form-item>
       <div nz-form-control>
         <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'">登录</button>
-        <button nz-button class="login-form-button" [nzType]="'default'" [nzSize]="'large'">注册</button>
+        <button nz-button class="login-form-button" [nzSize]="'large'" (click)="gotoRegister()">注册</button>
       </div>
     </div>
   </form>
