--- a/src/app/set-config/remote-server/remote-server.component.html
+++ b/src/app/set-config/remote-server/remote-server.component.html
@@ -2,11 +2,11 @@
 <form nz-form [formGroup]="validateForm" (ngSubmit)="_submitForm()">
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-      <label for="domain" nz-form-item-required>远程服务地址</label>
+      <label for="address" nz-form-item-required>远程服务地址</label>
     </div>
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-      <nz-input [nzSize]="'large'" formControlName="domain" [nzId]="'domain'"></nz-input>
-      <div nz-form-explain *ngIf="getFormControl('domain').dirty&&getFormControl('domain').hasError('domain')">请输入服务器地址！</div>
+      <nz-input [nzSize]="'large'" formControlName="address" [nzId]="'address'"></nz-input>
+      <div nz-form-explain *ngIf="getFormControl('address').dirty&&getFormControl('address').hasError('address')">请输入服务器地址！</div>
     </div>
   </div>
   <div nz-form-item nz-row>
@@ -14,7 +14,7 @@
       <label for="port" nz-form-item-required>远程服务端口</label>
     </div>
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-      <nz-input [nzSize]="'large'" formControlName="port" [nzId]="'port'" (ngModelChange)="updateConfirmValidator()"></nz-input>
+      <nz-input [nzSize]="'large'" formControlName="port" [nzId]="'port'"></nz-input>
       <div nz-form-explain *ngIf="getFormControl('port').dirty&&getFormControl('port').hasError('required')">请输入连接端口！</div>
     </div>
   </div>
@@ -29,7 +29,8 @@
   </div>
   <div nz-form-item nz-row style="margin-bottom:8px;">
     <div nz-form-control nz-col [nzSpan]="14" [nzOffset]="6">
-      <button nz-button [nzSize]="'large'" [nzType]="'primary'">确定</button>
+      <button nz-button [nzSize]="'default'" [nzType]="'primary'">确定</button>
+      <button nz-button [nzSize]="'default'" (click)="reset()">恢复</button>
     </div>
   </div>
 </form>
