--- a/src/app/login-manager/register/register.component.html
+++ b/src/app/login-manager/register/register.component.html
@@ -1,4 +1,4 @@
-<header><h2>注册</h2></header>
+<header><h2 style="margin:0 5%;">注册</h2></header>
 <form nz-form [formGroup]="validateForm" (ngSubmit)="_submitForm()">
   <header class="form-header"><h2>账号信息</h2></header>
   <div nz-form-item nz-row>
@@ -8,6 +8,7 @@
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
       <nz-input [nzSize]="'large'" formControlName="account" [nzId]="'account'"></nz-input>
       <div nz-form-explain *ngIf="getFormControl('account').dirty&&getFormControl('account').hasError('required')">请设置您的账户</div>
+      <div nz-form-explain *ngIf="getFormControl('account').dirty&&getFormControl('account').hasError('exist')">账户已存在</div>
     </div>
   </div>
   <div nz-form-item nz-row>
@@ -52,8 +53,7 @@
     </div>
     <div nz-form-control nz-col [nzSpan]="14">
       <nz-select formControlName="position" [nzSize]="'large'">
-        <nz-option [nzLabel]="'China'" [nzValue]="'China'"></nz-option>
-        <nz-option [nzLabel]="'U.S.A'" [nzValue]="'U.S.A'"></nz-option>
+        <nz-option *ngFor="let p of position" [nzLabel]="p.text" [nzValue]="p.value"></nz-option>
       </nz-select>
     </div>
   </div>
@@ -64,8 +64,7 @@
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback [nzValidateStatus]="validateForm.controls['phoneNumber']">
       <nz-input-group [nzSize]="'large'" nzCompact>
         <nz-select formControlName="phoneNumberPrefix" style="width: 25%;">
-          <nz-option [nzLabel]="'+86'" [nzValue]="'+86'"></nz-option>
-          <nz-option [nzLabel]="'+87'" [nzValue]="'+87'"></nz-option>
+          <nz-option *ngFor="let p of phonePrefix" [nzLabel]="p.text" [nzValue]="p.value"></nz-option>
         </nz-select>
         <input formControlName="phone" id="'phone'" nz-input style="width: 75%;">
       </nz-input-group>
@@ -74,7 +73,7 @@
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-      <label for="email" nz-form-item-required>E-mail</label>
+      <label for="email">E-mail</label>
     </div>
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
       <nz-input [nzSize]="'large'" formControlName="email" [nzId]="'email'"></nz-input>
@@ -82,11 +81,11 @@
     </div>
   </div>
   <div nz-form-item nz-row>
-    <div nz-col [nzSpan]="7" nz-form-label>
-      <label nz-form-item-required>备注</label>
+    <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+      <label>备注</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control>
-      <nz-input formControlName="comment" [nzRows]="2" [nzType]="'textarea'" [nzPlaceHolder]="'write any thing'" [nzSize]="'large'">
+    <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+      <nz-input formControlName="comment" [nzRows]="2" [nzType]="'textarea'" [nzPlaceHolder]="''" [nzSize]="'large'">
       </nz-input>
       <div nz-form-explain *ngIf="getFormControl('comment').dirty">请随意输入您想补充的信息</div>
     </div>
