--- a/src/styles.css
+++ b/src/styles.css
@@ -78,3 +78,11 @@
 .form-header>h2{
   line-height: 50px;
 }
+
+form.person-display *{
+  border:0;
+  resize:none;
+}
+form.person-display .ant-select-arrow{
+  display: none;
+}
