--- a/src/styles.css
+++ b/src/styles.css
@@ -86,3 +86,14 @@ form.person-display *{
 form.person-display .ant-select-arrow{
   display: none;
 }
+.content-form{
+  width: 60%;
+  margin-top: 50px;
+  max-width: 600px;
+  min-width: 500px;
+  display: inline-block;
+}
+
+.ant-btn{
+  margin-right:8px;
+}
