--- a/src/app/user-add/user-add.component.html
+++ b/src/app/user-add/user-add.component.html
@@ -1,18 +1,33 @@
-<form nz-form [formGroup]="validateForm" (ngSubmit)="_submitForm()" [class]=" 'content-form person-'+pattern ">
+<form nz-form [formGroup]="validateForm" (ngSubmit)="_submitForm()" class="content-form">
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-      <label for="name">
-            <span>名称 </span>
+      <label for="account" nz-form-item-required>账号</label>
+    </div>
+    <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+      <nz-input [nzSize]="'large'" formControlName="account" [nzId]="'account'"></nz-input>
+      <div nz-form-explain *ngIf="getFormControl('account').dirty&&getFormControl('account').hasError('required')">请设置账户</div>
+      <div nz-form-explain *ngIf="getFormControl('account').dirty&&getFormControl('account').hasError('exist')">账户已存在</div>
+    </div>
+  </div>
+  <div nz-form-item nz-row>
+    <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+      <label for="name" nz-form-item-required>
+            <span>
+              名称
+              <nz-tooltip [nzTitle]="'此用户别人该如何称呼'">
+                <i nz-tooltip class="anticon anticon-question-circle-o"></i>
+              </nz-tooltip>
+            </span>
       </label>
     </div>
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
       <nz-input [nzSize]="'large'" formControlName="name" [nzId]="'name'"></nz-input>
-      <div nz-form-explain *ngIf="getFormControl('name').dirty&&getFormControl('name').hasError('required')">请输入您的名称</div>
+      <div nz-form-explain *ngIf="getFormControl('name').dirty&&getFormControl('name').hasError('required')">请输入用户名称</div>
     </div>
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="6">
-      <label>职位</label>
+      <label nz-form-item-required>职位</label>
     </div>
     <div nz-form-control nz-col [nzSpan]="14">
       <nz-select formControlName="position" [nzSize]="'large'">
@@ -22,7 +37,7 @@
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-      <label for="phone">电话号码</label>
+      <label for="phone" nz-form-item-required>电话号码</label>
     </div>
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback [nzValidateStatus]="validateForm.controls['phoneNumber']">
       <nz-input-group [nzSize]="'large'" nzCompact>
@@ -31,7 +46,7 @@
         </nz-select>
         <input formControlName="phone" id="'phone'" nz-input style="width: 75%;">
       </nz-input-group>
-      <div nz-form-explain *ngIf="getFormControl('phone').dirty">请输入您的电话号码</div>
+      <div nz-form-explain *ngIf="getFormControl('phone').dirty">请输入用户的电话号码</div>
     </div>
   </div>
   <div nz-form-item nz-row>
@@ -48,19 +63,15 @@
       <label>备注</label>
     </div>
     <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-      <nz-input formControlName="comment" [nzRows]="2" [nzType]="'textarea'" [nzPlaceHolder]="'请随意输入您想补充的信息'" [nzSize]="'large'">
+      <nz-input formControlName="comment" [nzRows]="2" [nzType]="'textarea'" [nzPlaceHolder]="''" [nzSize]="'large'">
       </nz-input>
-      <div nz-form-explain *ngIf="getFormControl('comment').dirty">输入了非法字符</div>
+      <div nz-form-explain *ngIf="getFormControl('comment').dirty">请随意输入您想补充的信息</div>
     </div>
   </div>
-  <div *ngIf="pattern==='edit'" nz-form-item nz-row style="margin-bottom:8px;">
+  <div nz-form-item nz-row style="margin-bottom:8px;">
     <div nz-form-control nz-col [nzSpan]="14" [nzOffset]="6">
       <button nz-button [nzSize]="'large'" [nzType]="'primary'">确定</button>
-      <button nz-button [nzSize]="'large'" (click)="changePattern('display')">取消</button>
+      <button nz-button [nzSize]="'large'" (click)="backUser($event)">取消</button>
     </div>
   </div>
 </form>
-<div class="person-button">
-  <button nz-button [nzSize]="'default'" [nzType]="'default'" (click)="modifyPwd($event)">修改密码</button>
-  <button nz-button [nzSize]="'default'" (click)="changePattern('edit')">编写</button>
-</div>
