--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!login['id']" class="box_center" style="height: 100%;"><nz-spin [nzTip]="'加载中,请稍后......'"></nz-spin></div>
 <nz-layout class="layout" style="height:100%" *ngIf="login['id']">
-  <nz-header style="background-color: #F9F9F9;">
+  <nz-header style="background-color: #ffffff;border-bottom: 1px solid #e9e9e9;padding: 0px 16px;">
     <div></div>
     <nz-breadcrumb style="margin:12px 0;display: inline;font-size: 14px;">
       <nz-breadcrumb-item class="header-breadcrumb" *ngFor="let breadcrumb of breadcrumbs">{{breadcrumb}}</nz-breadcrumb-item>
@@ -21,15 +21,15 @@
         <li nz-menu-group>
           <span title>{{config['openRemote'] ? '远程服务系统' : '本地系统'}}</span>
           <ul>
-            <li nz-menu-item>项目管理</li>
+            <li nz-menu-item (click)="gotoProject()" [nzSelected]="true">项目管理</li>
             <li nz-menu-item *ngIf="login.role=='admin'" (click)="gotoUser()">用户管理</li>
-            <li nz-menu-item *ngIf="login.role=='admin'">配置管理</li>
+            <li nz-menu-item *ngIf="login.role=='admin'" (click)="gotoConfig()">配置管理</li>
           </ul>
         </li>
       </ul>
     </nz-sider>
-    <nz-layout>
-      <nz-content style="background:#fff; min-height: 280px; padding: 8px;">
+    <nz-layout style="overflow: hidden">
+      <nz-content style="background:#fff; min-height: 280px; padding: 8px;overflow-y: auto;">
         <router-outlet name="content"></router-outlet>
       </nz-content>
     </nz-layout>
