--- a/src/app/user-manage/user-manage.component.css
+++ b/src/app/user-manage/user-manage.component.css
@@ -15,3 +15,8 @@
 .table-operations{
   margin-bottom:8px;
 }
+:host ::ng-deep .vertical-center-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
