--- a/src/app/project-manage/project-manage.component.html
+++ b/src/app/project-manage/project-manage.component.html
@@ -10,5 +10,6 @@
   </label>
 </nz-radio-group>
 <div>
-  <card [empty]="true"></card><card [title]="'资产管理'" [tags]="tags" [content]="content"></card>
+  <card [empty]="true" (click)="addProject($event)"></card>
+  <card [title]="'资产管理'" [tags]="tags" [content]="content"></card>
 </div>
