--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -17,7 +17,7 @@
     </li>
   </ul>
   <footer>
-   <span class="vitrual-btn"><i [class]="'anticon anticon-'+(leftIcon||'edit')" (click)="leftAction($event)"></i>{{leftText || '编辑'}}</span>
+   <span [class]="'vitrual-btn '+(leftDisabled?'vitrual-btn-disabled':'')" (click)="leftAction($event)"><i [class]="'anticon anticon-'+(leftIcon||'edit')"></i>{{leftText || '编辑'}}</span>
     <span nz-table-divider></span>
     <span class="vitrual-btn"><i [class]="'anticon anticon-'+(rightIcon||'file-text')" (click)="rightAction($event)"></i>{{rightText || '详情'}}</span>
   </footer>
