--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -38,6 +38,10 @@ footer{
 .vitrual-btn>i{
   padding-right: 8px;
 }
+.vitrual-btn-disabled{
+  cursor: default;
+  opacity: 0.5;
+}
 footer .ant-divider{
   height: 16px;
   vertical-align: middle;
