--- a/src/styles.css
+++ b/src/styles.css
@@ -100,3 +100,9 @@ form.person-display .ant-select-arrow{
 .content-nav{
   margin-bottom:8px;
 }
+
+.ant-modal-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
