--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -19,6 +19,6 @@
   <footer>
    <span [class]="'vitrual-btn '+(leftDisabled?'vitrual-btn-disabled':'')" (click)="leftAction($event)"><i [class]="'anticon anticon-'+(leftIcon||'edit')"></i>{{leftText || '编辑'}}</span>
     <span nz-table-divider></span>
-    <span class="vitrual-btn"><i [class]="'anticon anticon-'+(rightIcon||'file-text')" (click)="rightAction($event)"></i>{{rightText || '详情'}}</span>
+    <span class="vitrual-btn" (click)="rightAction($event)"><i [class]="'anticon anticon-'+(rightIcon||'file-text')"></i>{{rightText || '详情'}}</span>
   </footer>
 </section>
