--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,17 +1,17 @@
 <nz-layout>
   <nz-sider [nzWidth]="300" style="background:#fff">
-    <nz-collapseset [nzBordered]="false">
-      <nz-collapse>
+    <nz-collapseset [nzBordered]="false" class="baseinfo-content">
+      <nz-collapse [nzActive]="true">
         <header collapse-title class="baseinfo-header">
           <span>{{project['name']}}</span>
           <span class="baseinfo-operate">
             <i nz-tooltip="启动" class="anticon anticon-caret-right"></i>
-            <i nz-tooltip="修改" class="anticon anticon-edit"></i>
-            <i nz-tooltip="修改路径" class="anticon anticon-link"></i>
-            <i nz-tooltip="删除" class="anticon anticon-delete"></i>
+            <i *ngIf="project.write" nz-tooltip="修改" class="anticon anticon-edit"></i>
+            <i *ngIf="project.write" nz-tooltip="修改路径" class="anticon anticon-link"></i>
+            <i *ngIf="project.write" nz-tooltip="删除" class="anticon anticon-delete"></i>
           </span>
         </header>
-        <ul>
+        <ul class="baseinfo-body">
           <li nz-row>
             <span nz-col [nzSm]="6" [nzXs]="24">代号</span>
             <span nz-col [nzSm]="2" [nzXs]="24">:</span>
@@ -28,9 +28,9 @@
             <span nz-col [nzSm]="16" [nzXs]="24">{{project['port']}}</span>
           </li>
           <li nz-row>
-            <span nz-col [nzSm]="6" [nzXs]="24">代号</span>
+            <span nz-col [nzSm]="6" [nzXs]="24">路径</span>
             <span nz-col [nzSm]="2" [nzXs]="24">:</span>
-            <span nz-col [nzSm]="16" [nzXs]="24">{{project['account']}}</span>
+            <span nz-col [nzSm]="16" [nzXs]="24">{{project['url']}}</span>
           </li>
           <li nz-row>
             <span nz-col [nzSm]="6" [nzXs]="24">权限</span>
@@ -45,7 +45,7 @@
           <li nz-row>
             <span nz-col [nzSm]="6" [nzXs]="24">创建时间</span>
             <span nz-col [nzSm]="2" [nzXs]="24">:</span>
-            <span nz-col [nzSm]="16" [nzXs]="24">{{project['createdTime']}}</span>
+            <span nz-col [nzSm]="16" [nzXs]="24">{{getDate(project['createdTime'])}}</span>
           </li>
           <li nz-row>
             <span nz-col [nzSm]="6" [nzXs]="24">备注信息</span>
@@ -56,7 +56,7 @@
       </nz-collapse>
     </nz-collapseset>
   </nz-sider>
-  <nz-layout style="background-color: #ffffff;">
+  <nz-layout style="background-color: #ffffff;padding-left: 16px;padding-top: 6px;">
     <nz-content>
       <router-outlet name="modular"></router-outlet>
     </nz-content>
