--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -64,14 +64,14 @@
 </nz-layout>
 <ng-template #deleteProjectContent>
   <div>
-    <p>确认删除{{project.name}}项目吗？</p>
+    <h2 style="margin-bottom: 8px;">确认删除{{project['name']}}项目吗？</h2>
     <p>完全删除项目的相关接口文件信息也会被一起删除，普通删除则会保留文件信息。不想删除请点右上角关闭窗口。</p>
   </div>
 </ng-template>
 <ng-template #deleteProjectContentFooter>
   <div>
     <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="confirmDeleteProject($event,false)" [nzLoading]="isConfirmLoading">
-      完全删除
+      普通删除
     </button>
     <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="confirmDeleteProject($event,true)" [nzLoading]="isConfirmLoading">
       完全删除
