--- a/src/app/modular-add/modular-add.component.html
+++ b/src/app/modular-add/modular-add.component.html
@@ -23,10 +23,8 @@
       <label>模块编写者</label>
     </div>
     <div nz-form-control nz-col [nzSpan]="14">
-      <nz-select formControlName="writer" [nzSize]="'large'" [nzMode]="'multiple'">
-        <nz-option [nzLabel]="'Red'" [nzValue]="'Red'"></nz-option>
-        <nz-option [nzLabel]="'Green'" [nzValue]="'Green'"></nz-option>
-        <nz-option [nzLabel]="'Blue'" [nzValue]="'Blue'"></nz-option>
+      <nz-select formControlName="writer" [nzSize]="'large'" [nzMode]="'multiple'" [nzPlaceHolder]="'可选择添加编写者'">
+        <nz-option *ngFor="let user of users" [nzLabel]="user['name']" [nzValue]="user['account']"></nz-option>
       </nz-select>
     </div>
   </div>
