--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -6,9 +6,9 @@
           <span>{{project['name']}}</span>
           <span class="baseinfo-operate">
             <i nz-tooltip="启动" class="anticon anticon-caret-right"></i>
-            <i *ngIf="project.write==='write'" nz-tooltip="修改" class="anticon anticon-edit" (click)="modifyProject($event)"></i>
-            <i *ngIf="project.write==='write'" nz-tooltip="修改路径" class="anticon anticon-link" (click)="modifyProUrl($event)"></i>
-            <i *ngIf="project.write==='write'" nz-tooltip="删除" class="anticon anticon-delete" (click)="deleteProject($event,deleteProjectContent,deleteProjectContentFooter)"></i>
+            <i *ngIf="project.writable==='writer'" nz-tooltip="修改" class="anticon anticon-edit" (click)="modifyProject($event)"></i>
+            <i *ngIf="project.writable==='writer'" nz-tooltip="修改路径" class="anticon anticon-link" (click)="modifyProUrl($event)"></i>
+            <i *ngIf="project.writable==='writer'" nz-tooltip="删除" class="anticon anticon-delete" (click)="deleteProject($event,deleteProjectContent,deleteProjectContentFooter)"></i>
           </span>
         </header>
         <ul class="baseinfo-body">
