--- a/src/app/modular-add/modular-add.component.html
+++ b/src/app/modular-add/modular-add.component.html
@@ -23,7 +23,7 @@
       <label>模块编写者</label>
     </div>
     <div nz-form-control nz-col [nzSpan]="14">
-      <nz-select formControlName="writer" [nzSize]="'large'" [nzMode]="'multiple'" [nzPlaceHolder]="'可选择添加编写者'">
+      <nz-select formControlName="writer" [nzSize]="'large'" [nzMode]="'multiple'" [nzPlaceHolder]="users.length?'可选择添加编写者':'暂无可添加的参与者'">
         <nz-option *ngFor="let user of users" [nzLabel]="user['name']" [nzValue]="user['account']"></nz-option>
       </nz-select>
     </div>
