delete project and child modular

--- a/src/app/modular-manage/modular-manage.component.html
+++ b/src/app/modular-manage/modular-manage.component.html
@@ -21,6 +21,7 @@
     [tags]="p['tags']"
     [content]="p['content']"
     [data]="p"
+    [leftDisabled]="p['writable']!=='writer'"
     (leftClick)="modifyModular(p)"
     (rightClick)="childModular(p)"
   ></card>
