--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -54,13 +54,13 @@
           </li>
         </ul>
       </nz-collapse>
-      <nz-collapse *ngFor="let m of modulars"  [nzActive]="parent===m['id']">
+      <nz-collapse *ngFor="let m of modulars;let i = index"  [nzActive]="parent===m['id']">
         <header collapse-title class="baseinfo-header">
           <span>{{m['name']}}</span>
           <span class="baseinfo-operate">
             <i *ngIf="m.writable==='writer'" nz-tooltip="修改" class="anticon anticon-edit" (click)="modifyProject($event)"></i>
             <i *ngIf="m.writable==='writer'" nz-tooltip="修改路径" class="anticon anticon-link" (click)="modifyProUrl($event)"></i>
-            <i *ngIf="m.writable==='writer'" nz-tooltip="删除" class="anticon anticon-delete" (click)="deleteProject($event,deleteProjectContent,deleteProjectContentFooter)"></i>
+            <i *ngIf="i==(modulars.length-1) && m.writable==='writer'" nz-tooltip="删除" class="anticon anticon-delete" (click)="deleteModular($event,m)"></i>
           </span>
         </header>
         <ul class="baseinfo-body">
