--- a/src/app/modular-manage/modular-manage.component.html
+++ b/src/app/modular-manage/modular-manage.component.html
@@ -27,5 +27,6 @@
   ></card>
 </div>
 <div *ngIf="scope==='interfaces'">
-  <span [routerLink]="[{outlets:{modular:'addInterfaces'}}]">添加</span>
+  <interfaces-item [empty]="true" [routerLink]="[{outlets:{modular:'addInterfaces'}}]"></interfaces-item>
+  <interfaces-item [head]="'POST'" [body]="'/aa/bb/ccc/ddd'" [tail]="'2018-11-01'"></interfaces-item>
 </div>
