--- a/src/app/interfaces-item/interfaces-item.component.css
+++ b/src/app/interfaces-item/interfaces-item.component.css
@@ -4,6 +4,7 @@ section{
   border: 1px solid #dddddd;
   padding: 0 16px;
   border-radius: 4px;
+  margin-bottom:8px;
 }
 .empty-panel{
   text-align: center;
